--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   sqflite_sqlcipher: ^1.0.0+6
   pull_to_refresh: ^1.5.7
   basic_utils: ^2.5.3
+  webview_flutter: ^0.3.21
+  flutter_html: ^1.0.0-pre.1
+  flutter_easyloading: ^1.1.3
 
 dev_dependencies:
   flutter_test:
