--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,12 @@ dependencies:
   webview_flutter: ^0.3.21
   flutter_html: ^1.0.0-pre.1
   flutter_easyloading: ^1.1.3
+  fluttertoast: ^4.0.1
+  cookie_jar: ^1.0.1
+  dio_cookie_manager: ^1.0.0
+  
+  # Flutter常用工具类，包含SharedPreferences Util, Screen Util, Directory Util, Widget Util, Image Util
+  flustars: ^0.3.2
 
 dev_dependencies:
   flutter_test:
@@ -60,6 +66,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/home_banner.png
+    - assets/images/bg_mine_title.png
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
