--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,8 +1,16 @@
 buildscript {
     ext.kotlin_version = '1.3.50'
     repositories {
-        google()
-        jcenter()
+        maven { url 'http://download.flutter.io' }
+        maven {
+            url 'https://maven.aliyun.com/repository/jcenter'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/central'
+        }
+        maven {
+            url 'https://maven.aliyun.com/repository/google'
+        }
     }
 
     dependencies {
@@ -24,8 +32,6 @@ allprojects {
             maven {
                 url 'https://maven.aliyun.com/repository/google'
             }
-            jcenter { url "http://jcenter.bintray.com/"}
-            google()
         }
     }
 }
